--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
@@ -51,25 +52,104 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     margin-top: 25px;
 }
-
-.carousel {
-    margin-top: 150px;
+.read{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    margin-top: -400px;
 }
 
 h3 {
-    font-size: 3rem;
-    margin-top: 25px;
+        font-size: 3rem;
 }
 
 p {
-    margin-top: 35px;
     font-size: 1.25rem;
 }
 
 /* END OF INDEX.HTML STYLING */
+/* BEGINING OF CAROUSEL */
+
+.carousel{
+    margin-top: 150px;
+    width: 100vw;
+    height: 100vh;
+    position: relative;
+}
+.carousel >  ul{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+.slide{
+    position: absolute;
+    inset: 0;
+    opacity: 0;
+    transition: 200ms opacity ease-in-out;
+    -webkit-transition: 200ms opacity ease-in-out;
+    -moz-transition: 200ms opacity ease-in-out;
+    -ms-transition: 200ms opacity ease-in-out;
+    -o-transition: 200ms opacity ease-in-out;
+}
+.slide>img{
+    display: block;
+    height: 60%;
+    width: 80%;
+    margin: auto;
+    object-fit: cover;
+    object-position: center;
+}
+
+.slide[data-active] {
+    opacity: 1;
+}
+
+.carousel-button {
+    position: absolute;
+    z-index: 2;
+    background: none;
+    border: none;
+    font-size: 4rem;
+    top: 50%;
+    transform: translateY(-300px);
+    -webkit-transform: translateY(-300px);
+    -moz-transform: translateY(-300px);
+    -ms-transform: translateY(-300px);
+    -o-transform: translateY(-300px);
+    color: rgb(255, 255, 255, .5);
+    cursor: pointer;
+    border-radius: .25rem;
+    -webkit-border-radius: .25rem;
+    -moz-border-radius: .25rem;
+    -ms-border-radius: .25rem;
+    -o-border-radius: .25rem;
+    padding: 0 .5rem;
+    background-color: rgb(0, 0, 0, .1);
+}
+.carousel-button:hover,
+.carousel-button:focus {
+    color: white;
+    background-color: rgb(0, 0, 0, .2);
+}
+
+/* FOR ACCESSABILITY USING KEYBOARD ONLY */
+.carousel-button:focus{
+    outline: 1px solid black;
+}
+
+.carousel-button.prev{
+    left: 1rem;
+}
+.carousel-button.next{
+    right: 1rem;
+}
 .card {
+    /* END OF CAROUSEL */
     display: flex;
     margin-bottom: 25px;
     height: max-content;
